// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="button-group button-group--horizontal"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 1
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 2
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> HorizontalProgressive story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="button-group button-group--horizontal-progressive"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 1
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 2
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> Vertical story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="button-group button-group--vertical"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 1
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 2
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> WithFiveButtons story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="button-group button-group--horizontal"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 1
      </span>
    </button>
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 2
      </span>
    </button>
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 3
      </span>
    </button>
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 4
      </span>
    </button>
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 5
      </span>
    </button>
  </div>
</div>
`;
